<resources>
    <string name="app_name" translatable="false">CompiComida</string>
    <string name="home_menu">Home</string>
    <string name="recipes_menu">Recetas</string>
    <string name="new_menu">Nuevo</string>
    <string name="pantry_menu">Despensa</string>
    <string name="lists_menu">Listas</string>
    <string name="tv_home_expire_title">Productos que caducarán pronto</string>
    <string name="tv_home_recent_list_title">Tu lista más reciente: %s</string>
    <string name="add_grocery_item_name_title">Nombre</string>
    <string name="add_grocery_item_name_hint">Nombre del producto</string>
    <string name="add_grocery_item_type_title">Tipo</string>
    <string name="add_grocery_item_quantity_title">Cantidad</string>
    <string name="add_grocery_item_quantity_hint">Cantidad del producto</string>
    <string name="add_grocery_item_units_title">Unidades</string>
    <string name="add_grocery_item_price_title">Precio / Unidad</string>
    <string name="add_grocery_item_price_hint">Precio del producto</string>
    <string name="add_grocery_item_image_title">Imagen</string>
    <string name="add_grocery_item_image_button_hint">Seleccionar imagen</string>
    <string name="add_grocery_item_add_button_text">Añadir Producto</string>
    <string name="add_grocery_list_add_button_text">Añadir Lista</string>
    <string name="add_pantry_item_add_button_text">Añadir producto a despensa</string>
    <string name="add_pantry_item_name_title">Nombre</string>
    <string name="add_pantry_item_name_hint">Nombre del producto</string>
    <string name="add_pantry_item_type_title">Tipo</string>
    <string name="add_pantry_item_quantity_title">Cantidad</string>
    <string name="add_pantry_item_quantity_hint">Cantidad del producto</string>
...
