<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <net.nicbell.materiallists.ListItem
            android:id="@+id/recycler_grocery_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headline="Lista 1"
            app:sizeType="THREE_PLUS_LINES"
            app:supportText="15 productos\nCreada el 25/11/2024">

        <androidx.appcompat.widget.AppCompatImageButton
                style="@style/CustomImageButtonStyleForList"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/recycler_grocery_list_btn_delete"
                android:src="@drawable/baseline_delete_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" />

    </net.nicbell.materiallists.ListItem>

</androidx.appcompat.widget.LinearLayoutCompat>